--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 336a142
-	trimbase = 
+	trim = building_map_tools
+	base = 9ff14cb
+	trimbase = 336a142
 	parent = upstream
 	previous = 13e61d9
