--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e02d578
-	trimbase = 
+	trim = building_gazebo_plugins
+	base = 68c2f9c
+	trimbase = e02d578
 	parent = upstream
 	previous = 13e61d9
