--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 83bc6e7
-	trimbase = 
+	trim = traffic_editor
+	base = 07a8a71
+	trimbase = 83bc6e7
 	parent = upstream
 	previous = 13e61d9
