--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9e1a744
-	trimbase = 
+	trim = building_map_msgs
+	base = d437b31
+	trimbase = 9e1a744
 	parent = upstream
 	previous = 13e61d9
