--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e9c1318
-	trimbase = 
+	trim = test_maps
+	base = 50823d2
+	trimbase = e9c1318
 	parent = upstream
 	previous = 13e61d9
