--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ff14cb
+	base = 860c0fb
 	trimbase = 
 	parent = release/eloquent/building_map_tools
-	previous = 
+	previous = 9ff14cb
