--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c66abfb
+	base = fc6430c
 	trimbase = 
 	parent = debian/eloquent/building_map_tools
-	previous = 
+	previous = c66abfb
