--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 50823d2
+	base = 36f2434
 	trimbase = 
 	parent = release/eloquent/test_maps
-	previous = 
+	previous = 50823d2
