--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 412a6c8
+	base = 00ca6b4
 	trimbase = 
 	parent = debian/eloquent/test_maps
-	previous = 
+	previous = 412a6c8
