--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 68c2f9c
+	base = 3002e3d
 	trimbase = 
 	parent = release/eloquent/building_gazebo_plugins
-	previous = 
+	previous = 68c2f9c
