--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c3029b7
+	base = 7d49fb1
 	trimbase = 
 	parent = debian/eloquent/building_gazebo_plugins
-	previous = 
+	previous = c3029b7
