--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 07a8a71
+	base = 912f27d
 	trimbase = 
 	parent = release/eloquent/traffic_editor
-	previous = 
+	previous = 07a8a71
