--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3bde0b8
+	base = 8338ce9
 	trimbase = 
 	parent = debian/eloquent/traffic_editor
-	previous = 
+	previous = 3bde0b8
