--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d437b31
+	base = 31d3c8d
 	trimbase = 
 	parent = release/eloquent/building_map_msgs
-	previous = 
+	previous = d437b31
