--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 945cad4
+	base = 8dfd166
 	trimbase = 
 	parent = debian/eloquent/building_map_msgs
-	previous = 
+	previous = 945cad4
