--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_msgs
-	base = a1785c6
-	trimbase = 
+	base = 6478e72
+	trimbase = a1785c6
 	parent = upstream
 	previous = 13e61d9
