--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = traffic_editor
-	base = 9834e42
-	trimbase = 
+	base = 7c492f0
+	trimbase = 9834e42
 	parent = upstream
 	previous = 13e61d9
