--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_tools
-	base = ebdfff4
-	trimbase = 
+	base = 1f00e90
+	trimbase = ebdfff4
 	parent = upstream
 	previous = 13e61d9
