--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_maps
-	base = 6399833
-	trimbase = 
+	base = 462b20b
+	trimbase = 6399833
 	parent = upstream
 	previous = 13e61d9
