--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_msgs
-	base = 02302b0
-	trimbase = 
+	base = ef3b8cf
+	trimbase = 02302b0
 	parent = upstream
 	previous = 2e3b7d9
