--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_gazebo_plugins
 	base = 7056300
-	trimbase = 297783c
+	trimbase = 
 	parent = upstream
 	previous = 13e61d9
