--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_gazebo_plugins
-	base = 04c09e0
-	trimbase = 
+	base = 035c875
+	trimbase = 04c09e0
 	parent = upstream
 	previous = 2e3b7d9
