--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = traffic_editor
-	base = c2299f4
-	trimbase = 
+	base = 00ca2fd
+	trimbase = c2299f4
 	parent = upstream
 	previous = 2e3b7d9
