--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_tools
-	base = f56da2f
-	trimbase = 
+	base = 73b0f9e
+	trimbase = f56da2f
 	parent = upstream
 	previous = 2e3b7d9
