--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_maps
-	base = fe7a197
-	trimbase = 
+	base = cecd595
+	trimbase = fe7a197
 	parent = upstream
 	previous = 2e3b7d9
