--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_msgs
-	base = a6265f6
-	trimbase = 
+	base = 834a731
+	trimbase = a6265f6
 	parent = upstream
 	previous = 9ef2555
