--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_gazebo_plugins
-	base = 77e3290
-	trimbase = 
+	base = 775005f
+	trimbase = 77e3290
 	parent = upstream
 	previous = 9ef2555
