--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = traffic_editor
-	base = b9ca352
-	trimbase = 
+	base = 631341d
+	trimbase = b9ca352
 	parent = upstream
 	previous = 9ef2555
