--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_tools
-	base = e8510b1
-	trimbase = 
+	base = b29d531
+	trimbase = e8510b1
 	parent = upstream
 	previous = 9ef2555
