--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_maps
-	base = c6f6092
-	trimbase = 
+	base = ff56fe0
+	trimbase = c6f6092
 	parent = upstream
 	previous = 9ef2555
