--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_msgs
-	base = 45383c6
-	trimbase = 
+	base = 96ad57d
+	trimbase = 45383c6
 	parent = upstream
 	previous = c6f6dc0
