--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_gazebo_plugins
-	base = 2a4e530
-	trimbase = 
+	base = 63389d5
+	trimbase = 2a4e530
 	parent = upstream
 	previous = c6f6dc0
