--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = traffic_editor
-	base = a3f9a99
-	trimbase = 
+	base = 9455b41
+	trimbase = a3f9a99
 	parent = upstream
 	previous = c6f6dc0
