--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_tools
-	base = 9a16ba8
-	trimbase = 
+	base = 9d7311b
+	trimbase = 9a16ba8
 	parent = upstream
 	previous = c6f6dc0
