--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_maps
-	base = 88cdb27
-	trimbase = 
+	base = e703b9a
+	trimbase = 88cdb27
 	parent = upstream
 	previous = c6f6dc0
