--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_msgs
-	base = 6c9ce72
-	trimbase = 
+	base = 5149595
+	trimbase = 6c9ce72
 	parent = upstream
 	previous = 8c26d25
