--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = traffic_editor
-	base = 65a7821
-	trimbase = 
+	base = 7f63f69
+	trimbase = 65a7821
 	parent = upstream
 	previous = 8c26d25
