--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_tools
-	base = 0e37083
-	trimbase = 
+	base = bdf3f91
+	trimbase = 0e37083
 	parent = upstream
 	previous = 8c26d25
