--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_maps
-	base = 6f85321
-	trimbase = 
+	base = 9c1e4c6
+	trimbase = 6f85321
 	parent = upstream
 	previous = 8c26d25
