--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_msgs
-	base = f4b2e01
-	trimbase = 
+	base = ebdc32e
+	trimbase = f4b2e01
 	parent = upstream
 	previous = 56fbaf4
