--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_gazebo_plugins
 	base = 61238eb
-	trimbase = f5dc2fe
+	trimbase = 
 	parent = upstream
 	previous = 8c26d25
