--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_gazebo_plugins
-	base = a91b9e2
-	trimbase = 
+	base = 9e220de
+	trimbase = a91b9e2
 	parent = upstream
 	previous = 56fbaf4
