--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = traffic_editor
-	base = 03e7fcf
-	trimbase = 
+	base = 4d30a38
+	trimbase = 03e7fcf
 	parent = upstream
 	previous = 56fbaf4
