--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = building_map_tools
-	base = cba0acf
-	trimbase = 
+	base = 334b8d4
+	trimbase = cba0acf
 	parent = upstream
 	previous = 56fbaf4
