--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = test_maps
-	base = 00ec105
-	trimbase = 
+	base = 3b4827f
+	trimbase = 00ec105
 	parent = upstream
 	previous = 56fbaf4
