--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = 02b983c
-	trim = 
-	trimbase = 
+	base = 9767cbb
+	trim = traffic_editor
+	trimbase = 02b983c
