--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = 5cad1d2
-	trim = 
-	trimbase = 
+	base = a75edc3
+	trim = test_maps
+	trimbase = 5cad1d2
