--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = e0aa7f3
-	trim = 
-	trimbase = 
+	base = bc92832
+	trim = building_sim_plugins/building_plugins_common
+	trimbase = e0aa7f3
