--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = c16203e
-	trim = 
-	trimbase = 
+	base = dbd128c
+	trim = building_sim_plugins/building_ignition_plugins
+	trimbase = c16203e
