--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = 049d451
-	trim = 
-	trimbase = 
+	base = 8a60289
+	trim = building_sim_plugins/building_gazebo_plugins
+	trimbase = 049d451
