--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = ebcc396
-	trim = 
-	trimbase = 
+	base = 40d492c
+	trim = building_map_tools
+	trimbase = ebcc396
