--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 38c1f74
-	base = 659c4e9
-	trim = 
-	trimbase = 
+	base = 5b1203b
+	trim = building_map_msgs
+	trimbase = 659c4e9
