--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/test_maps
-	previous = 
-	base = a75edc3
+	previous = a75edc3
+	base = 281a06d
 	trim = 
 	trimbase = 
