--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/test_maps
-	previous = 
-	base = e0877f8
+	previous = e0877f8
+	base = f42f5b7
 	trim = 
 	trimbase = 
