--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/building_ignition_plugins
-	previous = 
-	base = dbd128c
+	previous = dbd128c
+	base = 4c52b82
 	trim = 
 	trimbase = 
