--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/building_ignition_plugins
-	previous = 
-	base = 67752aa
+	previous = 67752aa
+	base = fb7e481
 	trim = 
 	trimbase = 
