--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/building_gazebo_plugins
-	previous = 
-	base = 8a60289
+	previous = 8a60289
+	base = 52b856f
 	trim = 
 	trimbase = 
