--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/building_gazebo_plugins
-	previous = 
-	base = d600b5a
+	previous = d600b5a
+	base = cdd7d83
 	trim = 
 	trimbase = 
