--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/traffic_editor
-	previous = 
-	base = 9767cbb
+	previous = 9767cbb
+	base = efb317a
 	trim = 
 	trimbase = 
