--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/traffic_editor
-	previous = 
-	base = 604d4dd
+	previous = 604d4dd
+	base = bb368c0
 	trim = 
 	trimbase = 
