--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/building_map_tools
-	previous = 
-	base = 40d492c
+	previous = 40d492c
+	base = 2963bde
 	trim = 
 	trimbase = 
