--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/building_map_tools
-	previous = 
-	base = 61c3b73
+	previous = 61c3b73
+	base = 7bf986e
 	trim = 
 	trimbase = 
