--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/building_sim_common
-	previous = 
-	base = bc92832
+	previous = bc92832
+	base = 0a46886
 	trim = 
 	trimbase = 
