--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/building_sim_common
-	previous = 
-	base = 4843428
+	previous = 4843428
+	base = f57e867
 	trim = 
 	trimbase = 
