--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/building_map_msgs
-	previous = 
-	base = 5b1203b
+	previous = 5b1203b
+	base = 1d7c451
 	trim = 
 	trimbase = 
