--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/building_map_msgs
-	previous = 
-	base = 7852f53
+	previous = 7852f53
+	base = d0f4db7
 	trim = 
 	trimbase = 
