--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = b3ce76e
+	base = d35a62d
 	trim = traffic_editor
-	trimbase = 
+	trimbase = b3ce76e
