--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = 9726bf5
+	base = cfcda4e
 	trim = test_maps
-	trimbase = 
+	trimbase = 9726bf5
