--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = 78b1a7c
+	base = b6c13b0
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 78b1a7c
