--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = 56e14a6
+	base = 7225e6c
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 56e14a6
