--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = f99ef75
+	base = 2129976
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = f99ef75
