--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = 8c78695
+	base = 92bf3e6
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 8c78695
