--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = da6646b
-	base = 271cd1f
+	base = ab7403e
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 271cd1f
