--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 21f1721
+	base = 735ffb4
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 21f1721
