--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = e3be666
+	base = 02f97bb
 	trim = test_maps
-	trimbase = 
+	trimbase = e3be666
