--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 2b8b3d2
+	base = f15b360
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 2b8b3d2
