--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = fef5ddd
+	base = ccee028
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = fef5ddd
