--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 74d365e
+	base = b73d0a1
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 74d365e
