--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 53a5b26
+	base = 3474020
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 53a5b26
