--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = fda4315
+	base = 9c0d3bb
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = fda4315
