--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = dac2e37
+	base = f2428fe
 	trim = traffic_editor
-	trimbase = 
+	trimbase = dac2e37
