--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 53a38e7
+	base = b5879d8
 	trim = test_maps
-	trimbase = 
+	trimbase = 53a38e7
