--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 12176a9
+	base = 9e72eb9
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 12176a9
