--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 475f9f5
+	base = 1b2142e
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 475f9f5
