--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 92a84ba
+	base = ac49112
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 92a84ba
