--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = 8c05bb4
+	base = 28b0cd5
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 8c05bb4
