--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7b0d3db
-	base = acdc4f8
+	base = 90e20aa
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = acdc4f8
