--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 6da2547
+	base = 36aaf91
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 6da2547
