--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = f81799e
+	base = 1795c71
 	trim = test_maps
-	trimbase = 
+	trimbase = f81799e
