--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 6ca756d
+	base = 26d2b12
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 6ca756d
