--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 670d74b
+	base = e995f43
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 670d74b
