--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 8432098
+	base = ff09576
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 8432098
