--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 7ca3fc3
+	base = fc2c3b5
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 7ca3fc3
