--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 612bb11
+	base = d449cdf
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 612bb11
