--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 1222968
+	base = 916b961
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 1222968
