--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 1e7d8d3
+	base = a95c027
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 1e7d8d3
