--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 88ba5ba
+	base = 3d056b9
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 88ba5ba
