--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 85c925b
+	base = 5c0eaab
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 85c925b
