--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 43f6cdf
+	base = ea8072a
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 43f6cdf
