--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 9a5d652
+	base = 3484440
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 9a5d652
