--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 72d61dd
-	base = 590fdf4
+	base = e54eb7c
 	trim = test_maps
-	trimbase = 
+	trimbase = 590fdf4
