--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = 28342b2
+	base = 71db9ed
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 28342b2
