--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = b7d708a
+	base = 9885447
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = b7d708a
