--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = f5c71df
+	base = 8452ea8
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = f5c71df
