--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = 33ffeed
+	base = a5ce51e
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 33ffeed
