--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = 9745247
+	base = 8631b47
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 9745247
