--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = f40bb00
+	base = a074ce1
 	trim = traffic_editor
-	trimbase = 
+	trimbase = f40bb00
