--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3055f39
-	base = 2af161f
+	base = 69a3b62
 	trim = test_maps
-	trimbase = 
+	trimbase = 2af161f
