--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 24d99a0
+	base = 038b90a
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 24d99a0
