--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 3779bf3
+	base = 28549b5
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 3779bf3
