--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 136bd29
+	base = 13df002
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 136bd29
