--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 1eb174a
+	base = afacf56
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 1eb174a
