--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = b8380fe
+	base = 36e63ce
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = b8380fe
