--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 202fb5a
+	base = 847acf5
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 202fb5a
