--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 0596eac
+	base = 51cb76e
 	trim = test_maps
-	trimbase = 
+	trimbase = 0596eac
