--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 009cb58
+	base = 184ebb0
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 009cb58
