--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 52239f4
+	base = 7cef66d
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 52239f4
