--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 33203a4
+	base = 9c82547
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 33203a4
