--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 970fc5c
+	base = 76fd41b
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 970fc5c
