--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = ad82996
+	base = 6dc3e2e
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = ad82996
