--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 0d5b592
+	base = cf0fdf0
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 0d5b592
