--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6af039a
-	base = 0bdd2dd
+	base = ded5294
 	trim = test_maps
-	trimbase = 
+	trimbase = 0bdd2dd
