--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = e3e7a6d
+	base = 5acee2e
 	trim = building_map_tools
-	trimbase = 
+	trimbase = e3e7a6d
