--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = 317fa48
+	base = 3547737
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 317fa48
