--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = 48df0ae
+	base = 5e0b915
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 48df0ae
