--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = ef67734
+	base = 6360173
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = ef67734
