--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = 6e95c15
+	base = 49f0eea
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 6e95c15
