--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = fd8f919
+	base = 3cf0ae2
 	trim = traffic_editor
-	trimbase = 
+	trimbase = fd8f919
