--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 49593d3
-	base = 4ecd220
+	base = 9ebc5fa
 	trim = test_maps
-	trimbase = 
+	trimbase = 4ecd220
