--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = c539f3e
-	trim = 
-	trimbase = 
+	base = b07550d
+	trim = building_map_tools
+	trimbase = c539f3e
