--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = 1e3d2bd
-	trim = 
-	trimbase = 
+	base = 6e52e4a
+	trim = building_sim_plugins/building_gazebo_plugins
+	trimbase = 1e3d2bd
