--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = 003da5a
-	trim = 
-	trimbase = 
+	base = 40ffccc
+	trim = building_sim_plugins/building_plugins_common
+	trimbase = 003da5a
