--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = ea46697
-	trim = 
-	trimbase = 
+	base = 7ae5f5a
+	trim = building_sim_plugins/building_ignition_plugins
+	trimbase = ea46697
