--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = 5736589
-	trim = 
-	trimbase = 
+	base = a6747c0
+	trim = building_map_msgs
+	trimbase = 5736589
