--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = ac7bb97
-	trim = 
-	trimbase = 
+	base = fc033af
+	trim = traffic_editor
+	trimbase = ac7bb97
