--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f36a0f9
-	base = 0262095
-	trim = 
-	trimbase = 
+	base = f7007b7
+	trim = test_maps
+	trimbase = 0262095
