--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/traffic_editor
-	previous = 
-	base = fc033af
+	previous = fc033af
+	base = b778dd9
 	trim = 
 	trimbase = 
