--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/traffic_editor
-	previous = 
-	base = 8fc96bd
+	previous = 8fc96bd
+	base = f0f8aeb
 	trim = 
 	trimbase = 
