--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/building_sim_common
-	previous = 
-	base = 40ffccc
+	previous = 40ffccc
+	base = a7b2238
 	trim = 
 	trimbase = 
