--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/building_sim_common
-	previous = 
-	base = ad6d692
+	previous = ad6d692
+	base = f04fc29
 	trim = 
 	trimbase = 
