--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/test_maps
-	previous = 
-	base = f7007b7
+	previous = f7007b7
+	base = b810d9b
 	trim = 
 	trimbase = 
