--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/test_maps
-	previous = 
-	base = eda46a2
+	previous = eda46a2
+	base = 81d8d03
 	trim = 
 	trimbase = 
