--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/building_map_tools
-	previous = 
-	base = b07550d
+	previous = b07550d
+	base = 92ad960
 	trim = 
 	trimbase = 
