--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/building_gazebo_plugins
-	previous = 
-	base = 6e52e4a
+	previous = 6e52e4a
+	base = db012bb
 	trim = 
 	trimbase = 
