--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/building_gazebo_plugins
-	previous = 
-	base = f27cd52
+	previous = f27cd52
+	base = f74059f
 	trim = 
 	trimbase = 
