--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/building_ignition_plugins
-	previous = 
-	base = 7ae5f5a
+	previous = 7ae5f5a
+	base = fe7a2f1
 	trim = 
 	trimbase = 
