--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/building_ignition_plugins
-	previous = 
-	base = 3e5ee2a
+	previous = 3e5ee2a
+	base = 0349fbc
 	trim = 
 	trimbase = 
