--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/building_map_msgs
-	previous = 
-	base = a6747c0
+	previous = a6747c0
+	base = 0734ce9
 	trim = 
 	trimbase = 
