--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/building_map_msgs
-	previous = 
-	base = 1707789
+	previous = 1707789
+	base = e4ac543
 	trim = 
 	trimbase = 
