--- a/building_sim_plugins/building_plugins_common/package.xml
+++ b/building_sim_plugins/building_plugins_common/package.xml
@@ -14,20 +14,20 @@
   <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
   <license>Apache 2.0</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_rolling</buildtool_depend>
 
   <build_depend>eigen</build_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rmf_fleet_msgs</depend>
-  <depend>rmf_door_msgs</depend>
-  <depend>rmf_lift_msgs</depend>
-  <depend>building_map_msgs</depend>
-  <depend>tf2_ros</depend>
-  <depend>geometry_msgs</depend>
-  <depend>std_msgs</depend>
-  <depend>std_srvs</depend>
-  <depend>menge</depend>
+  <depend>rclcpp_rolling</depend>
+  <depend>rmf_fleet_msgs_rolling</depend>
+  <depend>rmf_door_msgs_rolling</depend>
+  <depend>rmf_lift_msgs_rolling</depend>
+  <depend>building_map_msgs_rolling</depend>
+  <depend>tf2_ros_rolling</depend>
+  <depend>geometry_msgs_rolling</depend>
+  <depend>std_msgs_rolling</depend>
+  <depend>std_srvs_rolling</depend>
+  <depend>menge_rolling</depend>
   <depend>libqt5-widgets</depend>
   <depend>qtbase5-dev</depend>
 
