--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = 25e3f0c
+	base = 0ec45d4
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 25e3f0c
