--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = c8edffc
+	base = 98867af
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = c8edffc
