--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = 8d91577
+	base = 92e11a7
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 8d91577
