--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = 833854a
+	base = 21f7142
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 833854a
