--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = 79c4239
+	base = 4f3ce1f
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 79c4239
