--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = af0b5f7
+	base = dd4db86
 	trim = traffic_editor
-	trimbase = 
+	trimbase = af0b5f7
