--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2934618
-	base = 5b75648
+	base = 2c45c43
 	trim = test_maps
-	trimbase = 
+	trimbase = 5b75648
