--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = ff51122
+	base = b6e0fb5
 	trim = building_map_tools
-	trimbase = 
+	trimbase = ff51122
