--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 9c650cb
+	base = 604cc08
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 9c650cb
