--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 65511a3
+	base = 8bcb7a1
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 65511a3
