--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = fa956a5
+	base = 5acc8c9
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = fa956a5
