--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 66f06be
+	base = a4623de
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 66f06be
