--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = e48bac1
+	base = 85d9778
 	trim = traffic_editor
-	trimbase = 
+	trimbase = e48bac1
