--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 03e3999
+	base = a2ff6b1
 	trim = test_maps
-	trimbase = 
+	trimbase = 03e3999
