--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = de94bd1
+	base = 2e0f805
 	trim = building_map_tools
-	trimbase = 
+	trimbase = de94bd1
