--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 8a547aa
+	base = 0542fb9
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 8a547aa
