--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 210aec9
+	base = 431585d
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 210aec9
