--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = f168199
+	base = bd5e2a6
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = f168199
