--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 73c8acb
+	base = f5fbef3
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 73c8acb
