--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 00bd637
+	base = 419086d
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 00bd637
