--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = a82ea07
-	base = 77a4012
+	base = 30b02e9
 	trim = test_maps
-	trimbase = 
+	trimbase = 77a4012
