--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = 3aba00a
+	base = 0761399
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 3aba00a
