--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = f093e08
+	base = 4954058
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = f093e08
