--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = 18a622b
+	base = 3fd6d60
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 18a622b
