--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = 4bedaf5
+	base = d14a944
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 4bedaf5
