--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = 6cd906d
+	base = 23e1694
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 6cd906d
