--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = 4f89aea
+	base = 87fcdab
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 4f89aea
