--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f9bf542
-	base = be71cd5
+	base = ae47f2d
 	trim = test_maps
-	trimbase = 
+	trimbase = be71cd5
