--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = f9ea6ac
+	base = 029ad15
 	trim = building_map_tools
-	trimbase = 
+	trimbase = f9ea6ac
