--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = ac1f322
+	base = e53f782
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = ac1f322
