--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = d3ed274
+	base = 3ebde76
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = d3ed274
