--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = e0f4414
+	base = f4318eb
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = e0f4414
