--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = bbaa424
+	base = af9a3fe
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = bbaa424
