--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = 99955fa
+	base = c786695
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 99955fa
