--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e2f466c
-	base = d8cac8e
+	base = 2594914
 	trim = test_maps
-	trimbase = 
+	trimbase = d8cac8e
