--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = c81ce7d
+	base = eb1ef22
 	trim = building_map_tools
-	trimbase = 
+	trimbase = c81ce7d
