--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = afc9c9b
+	base = 171869e
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = afc9c9b
