--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = 5d045f5
+	base = 8478416
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 5d045f5
