--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = 7cb56c4
+	base = 9d8b3ce
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 7cb56c4
