--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = 35a9faf
+	base = 61e899c
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 35a9faf
