--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = 9e674fa
+	base = e71bc2b
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 9e674fa
