--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5517e2d
-	base = 349d69a
+	base = b14e75c
 	trim = test_maps
-	trimbase = 
+	trimbase = 349d69a
