--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,9 @@ script-dir=$base/lib/building_map_tools
 install-scripts=$base/lib/building_map_tools
 
 [options]
+setup_requires = pytest-runner
 tests_require = pytest
 
 [tool:pytest]
 addopts = --verbose
+testpaths = test
