--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = 3ced8ed
+	base = a7c3055
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 3ced8ed
