--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = 26d63d5
+	base = 0d72fab
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 26d63d5
