--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = bc71467
+	base = 5d44224
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = bc71467
