--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = a3782e5
+	base = dd0f6d8
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = a3782e5
