--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = cc8cc91
+	base = df9323b
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = cc8cc91
