--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = e8021f5
+	base = 701df17
 	trim = traffic_editor
-	trimbase = 
+	trimbase = e8021f5
