--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d681050
-	base = 700dc4d
+	base = f148ba7
 	trim = test_maps
-	trimbase = 
+	trimbase = 700dc4d
