--- a/building_map_msgs/package.xml
+++ b/building_map_msgs/package.xml
@@ -2,23 +2,23 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>building_map_msgs</name>
-  <version>1.9999.0</version>
+  <version>1.2.0</version>
   <description>Messages used to send building maps</description>
   <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
   <license>Apache License 2.0</license>
 
-  <buildtool_depend>ament_cmake_rolling</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <buildtool_depend>rosidl_default_generators_rolling</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <build_depend>builtin_interfaces_rolling</build_depend>
-  <build_depend>geometry_msgs_rolling</build_depend>
+  <build_depend>builtin_interfaces</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
-  <exec_depend>builtin_interfaces_rolling</exec_depend>
-  <exec_depend>geometry_msgs_rolling</exec_depend>
-  <exec_depend>rosidl_default_runtime_rolling</exec_depend>
+  <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <test_depend>ament_lint_common_rolling</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
