--- a/building_sim_plugins/building_ignition_plugins/package.xml
+++ b/building_sim_plugins/building_ignition_plugins/package.xml
@@ -1,6 +1,6 @@
 <package format="3">
   <name>building_ignition_plugins</name>
-  <version>1.9999.0</version>
+  <version>1.2.0</version>
   <description>
     Ignition gazebo plugins for building infrastructure simulation
   </description>
@@ -10,17 +10,17 @@
   <maintainer email="luca@openrobotics.org">Luca Della Vedova</maintainer>
   <license>Apache 2.0</license>
 
-  <buildtool_depend>ament_cmake_rolling</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- TODO fix dependencies -->
-  <depend>rclcpp_rolling</depend>
+  <depend>rclcpp</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_door_msgs</depend>
   <depend>rmf_lift_msgs</depend>
-  <depend>tf2_ros_rolling</depend>
-  <depend>geometry_msgs_rolling</depend>
-  <depend>std_msgs_rolling</depend>
-  <depend>std_srvs_rolling</depend>
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
 
   <depend>building_sim_common</depend>
 
