--- a/building_sim_plugins/building_plugins_common/package.xml
+++ b/building_sim_plugins/building_plugins_common/package.xml
@@ -1,6 +1,6 @@
 <package format="3">
   <name>building_sim_common</name>
-  <version>1.9999.0</version>
+  <version>1.2.0</version>
   <description>
     Common utility functions for Gazebo and ignition building plugins
   </description>
@@ -14,19 +14,19 @@
   <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
   <license>Apache 2.0</license>
 
-  <buildtool_depend>ament_cmake_rolling</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>eigen</build_depend>
 
-  <depend>rclcpp_rolling</depend>
+  <depend>rclcpp</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_door_msgs</depend>
   <depend>rmf_lift_msgs</depend>
   <depend>building_map_msgs</depend>
-  <depend>tf2_ros_rolling</depend>
-  <depend>geometry_msgs_rolling</depend>
-  <depend>std_msgs_rolling</depend>
-  <depend>std_srvs_rolling</depend>
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>menge</depend>
   <depend>libqt5-widgets</depend>
   <depend>qtbase5-dev</depend>
