--- a/traffic_editor/package.xml
+++ b/traffic_editor/package.xml
@@ -2,13 +2,13 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>traffic_editor</name>
-  <version>1.9999.0</version>
+  <version>1.2.0</version>
   <description>traffic editor</description>
   <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
   <license>Apache License 2.0</license>
 
-  <build_depend>ament_cmake_rolling</build_depend>
-  <build_depend>ament_index_cpp_rolling</build_depend>
+  <build_depend>ament_cmake</build_depend>
+  <build_depend>ament_index_cpp</build_depend>
   <build_depend>ignition-plugin</build_depend>
   <build_depend>ignition-common3</build_depend>
   <build_depend>yaml-cpp</build_depend>
