--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = 0ec3aee
+	base = 790d410
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 0ec3aee
