--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = 6bb8eed
+	base = fc482e9
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 6bb8eed
