--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = 0b21a70
+	base = 1703a15
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 0b21a70
