--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = de5bd17
+	base = 1794333
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = de5bd17
