--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = 0308d58
+	base = 358721f
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 0308d58
