--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = 44fa09a
+	base = 9e50348
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 44fa09a
