--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 51076f6
-	base = 1c702aa
+	base = 1d926e6
 	trim = test_maps
-	trimbase = 
+	trimbase = 1c702aa
