--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = c374e9b
+	base = 09a1cd7
 	trim = building_map_tools
-	trimbase = 
+	trimbase = c374e9b
