--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = ecba8f8
+	base = 29d9ab5
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = ecba8f8
