--- a/package.xml
+++ b/package.xml
@@ -27,6 +27,7 @@
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
+  <depend>menge</depend>
   <depend>libqt5-widgets</depend>
   <depend>qtbase5-dev</depend>
 
