--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = bfb3c58
+	base = 6a90c83
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = bfb3c58
