--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = 7070fc5
+	base = 0cf8b1c
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 7070fc5
