--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = ca119af
+	base = 999d7d4
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = ca119af
