--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = 85668b4
+	base = 426921f
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 85668b4
