--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 08203cf
-	base = 3d3d4c8
+	base = 1bfe7bb
 	trim = test_maps
-	trimbase = 
+	trimbase = 3d3d4c8
