--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 0e077d2
+	base = 9f41f5e
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 0e077d2
