--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 65c6b07
+	base = ff8638d
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 65c6b07
