--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 3e9451a
+	base = 656e270
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 3e9451a
