--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 4c3730d
+	base = d6d9b8b
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 4c3730d
