--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 217be8f
+	base = 64b89c4
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 217be8f
