--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 4a53381
+	base = 0c7f352
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 4a53381
