--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 557c01b
+	base = e7acb3a
 	trim = test_maps
-	trimbase = 
+	trimbase = 557c01b
