Revert "removing tests"
This reverts commit e7908a2766a621e83998612a66f56d9a7778ef9c.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ install-scripts=$base/lib/building_map_tools
 
 [options]
 setup_requires = pytest-runner
+tests_require = pytest
 
 [tool:pytest]
 addopts = --verbose
+testpaths = test
