--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 21344a9
+	base = f875b41
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 21344a9
