--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 036186c
+	base = 0681ae7
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 036186c
