--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 67aaef5
+	base = 64c1a0b
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 67aaef5
