--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = f6cb191
+	base = 7316121
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = f6cb191
