--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 649dd24
+	base = 68ddef1
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 649dd24
