--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 9803e91
+	base = 5d793b9
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 9803e91
