--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = d497f35
+	base = 3f6ce07
 	trim = test_maps
-	trimbase = 
+	trimbase = d497f35
