--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 0d217aa
+	base = ef01c45
 	trim = building_map_tools
-	trimbase = 
+	trimbase = 0d217aa
