--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = b46e512
+	base = f387c82
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = b46e512
