--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = c3c91a8
+	base = 088209c
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = c3c91a8
