--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 773080f
+	base = 68731ed
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = 773080f
