--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 0af8360
+	base = 6b36a2b
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 0af8360
