--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = 912afba
+	base = f8b29f1
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 912afba
