--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e0467f7
-	base = ed6ab32
+	base = a5ac426
 	trim = test_maps
-	trimbase = 
+	trimbase = ed6ab32
