--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = fae070e
+	base = 991ba77
 	trim = building_map_tools
-	trimbase = 
+	trimbase = fae070e
