--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = ec0cd39
+	base = e36296b
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = ec0cd39
