--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = 72e22cf
+	base = 382365c
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 72e22cf
