--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = c32c340
+	base = bee204e
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = c32c340
