--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = 708e542
+	base = 195a481
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 708e542
