--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = e34dcd0
+	base = c0f5eef
 	trim = traffic_editor
-	trimbase = 
+	trimbase = e34dcd0
