--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b757edb
-	base = 5b0604f
+	base = 3bbf2b9
 	trim = test_maps
-	trimbase = 
+	trimbase = 5b0604f
