--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = a3048be
+	base = ed89c33
 	trim = building_map_tools
-	trimbase = 
+	trimbase = a3048be
