--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = 36d6eec
+	base = 7b64fc9
 	trim = building_sim_plugins/building_gazebo_plugins
-	trimbase = 
+	trimbase = 36d6eec
