--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = 4225539
+	base = dcb90ee
 	trim = building_sim_plugins/building_plugins_common
-	trimbase = 
+	trimbase = 4225539
