--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = d39bf3d
+	base = f8b4ca4
 	trim = building_sim_plugins/building_ignition_plugins
-	trimbase = 
+	trimbase = d39bf3d
