--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = 51697c6
+	base = 323e1a2
 	trim = building_map_msgs
-	trimbase = 
+	trimbase = 51697c6
