--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = 01c4ca1
+	base = 3fe1435
 	trim = traffic_editor
-	trimbase = 
+	trimbase = 01c4ca1
