--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = bc3a474
-	base = 9e072db
+	base = 5741478
 	trim = test_maps
-	trimbase = 
+	trimbase = 9e072db
